[RF][Start][navigation][submenu][team] testTeamLinks()<NataliiaOliver> (#338)
* RF testTeamNames(), added method to TeamPage, added testTeamLinks() to TeamTest, NataliiaOliverTest deleted