@@ -4,8 +4,6 @@ import base.BaseTest;
 import org.testng.Assert;
 import org.testng.annotations.Test;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 public class TeamTest extends BaseTest {
@@ -57,8 +55,7 @@ public class TeamTest extends BaseTest {
 
     @Test
     public void testTeamNames() {
-        List<String> expectedTeamNames = new ArrayList<>(
-                Arrays.asList("Oliver Schade", "Gregor Scheithauer", "Stefan Scheler"));
+        List<String> expectedTeamNames = List.of("Oliver Schade", "Gregor Scheithauer", "Stefan Scheler");
 
         List<String> actualTeamNames =
         openBaseURL()
@@ -66,5 +63,17 @@ public class TeamTest extends BaseTest {
                 .getTeamNames();
 
         Assert.assertEquals(actualTeamNames, expectedTeamNames);
+    }
+
+    @Test
+    public void testTeamLinks() {
+        List<String> expectedTeamLinks = List.of("ls-la.net", "E-Taste.org", "sts.synflood.de");
+
+        List<String> actualTeamLinks =
+                openBaseURL()
+                        .clickTeamSubmenu()
+                        .getTeamLinks();
+
+        Assert.assertEquals(actualTeamLinks, expectedTeamLinks);
     }
 }
